Adding Blazor Task creation.  This includes a generic component to link custom field groups.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/CustomFieldGroup/CustomFieldGroup.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/CustomFieldGroup/CustomFieldGroup.razor
@@ -13,7 +13,7 @@
         <BreadcrumbItem>
             <BreadcrumbLink To="dashboard">@LanguageHelper.GetTitle(langQueryList, 10121)</BreadcrumbLink>
         </BreadcrumbItem>
-        <BreadcrumbItem Active="true">
+        <BreadcrumbItem>
             <BreadcrumbLink To="customfieldgroup/customfieldgroups">@LanguageHelper.GetTitle(langQueryList, 10124)</BreadcrumbLink>
         </BreadcrumbItem>
         <BreadcrumbItem Active="true">
