--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarClient.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarClient.razor
@@ -1,7 +1,7 @@
 ﻿<BarItem>
     <BarDropdown>
         <BarDropdownToggle>
-            <BarIcon IconName="@("fa-address-book")" />
+            <BarIcon IconName="@("fa-address-book")" Class="fa-fw"/>
             @LanguageHelper.GetTitle(langQueryList, 10105)
         </BarDropdownToggle>
         <BarDropdownMenu>
