--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarCustomField.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarCustomField.razor
@@ -1,7 +1,7 @@
 ﻿<BarItem>
     <BarDropdown>
         <BarDropdownToggle>
-            <BarIcon IconName="@("fa-file-code")" />
+            <BarIcon IconName="@("fa-file-code")" Class="fa-fw"/>
             @LanguageHelper.GetTitle(langQueryList, 10124)
         </BarDropdownToggle>
         <BarDropdownMenu>
