--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarDashboard.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarDashboard.razor
@@ -1,6 +1,6 @@
 ﻿<BarItem>
     <BarLink To="dashboard">
-        <BarIcon IconName="IconName.Dashboard" />
+        <BarIcon IconName="IconName.Dashboard" Class="fa-fw"/>
         @LanguageHelper.GetTitle(langQueryList, 10104)
     </BarLink>
 </BarItem>
