--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarLogin.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarLogin.razor
@@ -1,6 +1,6 @@
 ﻿<BarItem>
     <BarLink To="login">
-        <BarIcon IconName="IconName.LockOpen" />
+        <BarIcon IconName="IconName.LockOpen" Class="fa-fw"/>
         Login
     </BarLink>
 </BarItem>
