--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarSetting.razor
@@ -1,7 +1,7 @@
 ﻿<BarItem>
     <BarDropdown>
         <BarDropdownToggle>
-            <BarIcon IconName="@("fa-tools")" />
+            <BarIcon IconName="@("fa-tools")" Class="fa-fw"/>
             @LanguageHelper.GetTitle(langQueryList, 10118)
         </BarDropdownToggle>
         <BarDropdownMenu>
