--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTask.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTask.razor
@@ -1,14 +1,14 @@
 ﻿<BarItem>
     <BarDropdown>
         <BarDropdownToggle>
-            <BarIcon IconName="@("fa-tasks")" />
+            <BarIcon IconName="@("fa-tasks")" Class="fa-fw"/>
             @LanguageHelper.GetTitle(langQueryList, 10111)
         </BarDropdownToggle>
         <BarDropdownMenu>
-            <BarDropdownItem To="taskgroup/taskgroups">
+            <BarDropdownItem To="task/tasks">
                 @LanguageHelper.GetTitle(langQueryList, 10112)
             </BarDropdownItem>
-            <BarDropdownItem To="taskgroup/createoredit">
+            <BarDropdownItem To="/taskgroup">
                 @LanguageHelper.GetTitle(langQueryList, 10113)
             </BarDropdownItem>
         </BarDropdownMenu>
