--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTeam.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarTeam.razor
@@ -1,7 +1,7 @@
 ﻿<BarItem>
     <BarDropdown>
         <BarDropdownToggle>
-            <BarIcon IconName="@("fa-sitemap")" />
+            <BarIcon IconName="@("fa-sitemap")" Class="fa-fw"/>
             @LanguageHelper.GetTitle(langQueryList, 10108)
         </BarDropdownToggle>
         <BarDropdownMenu>
