--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUser.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUser.razor
@@ -1,7 +1,7 @@
 ﻿<BarItem>
     <BarDropdown>
         <BarDropdownToggle>
-            <BarIcon IconName="@("fa-users")" />
+            <BarIcon IconName="@("fa-users")" Class="fa-fw"/>
             @LanguageHelper.GetTitle(langQueryList, 10115)
         </BarDropdownToggle>
         <BarDropdownMenu>
