Moved Task Gantt chart to Google Charts.  This functionality is not yet fully completed.  Generic CustomFieldGroupEdit has been created however save functionality has not yet been implemented.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -18,6 +18,7 @@
 @using PanacheSoftware.UI.Client.Blazor.Shared.Components
 @using PanacheSoftware.UI.Client.Blazor.Shared.ProgressBar
 @using PanacheSoftware.UI.Client.Blazor.Shared.CustomFieldGroupLinks
+@using PanacheSoftware.UI.Client.Blazor.Shared.CustomFieldGroupEdit
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
 @using PanacheSoftware.UI.Client.Blazor.Pages.Client
 @using PanacheSoftware.UI.Client.Blazor.Pages.Team
