--- a/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/CustomFieldGroupValues.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Pages/Shared/CustomFieldGroupValues.razor
@@ -65,7 +65,7 @@
                 {
                     CustomFieldHeaderId = customFieldHeaderRowField.customFieldHeader.Id,
                     Id = Guid.Empty,
-                    FieldValue = string.Empty
+                    StringValue = string.Empty
                 };
             }
 
