--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/Tasks.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/Tasks.razor
@@ -41,7 +41,7 @@
                     <DataGridColumns>
                         <DataGridColumn TItem="TaskGroupHead" Field="@nameof(TaskGroupHead.Id)" Caption="" Width="10px" Filterable="false" Sortable="false">
                             <DisplayTemplate>
-                                <Button To="@($"taskgroup/{context.Id}")" Type="ButtonType.Link" Color="Color.Primary"><Icon Name="@("fa-edit")" /></Button>
+                                <Button To="@($"taskview/{context.Id}")" Type="ButtonType.Link" Color="Color.Primary"><Icon Name="@("fa-tasks")" /></Button>
                             </DisplayTemplate>
                         </DataGridColumn>
                         <DataGridColumn TItem="TaskGroupHead" Field="@nameof(TaskGroupHead.ShortName)" Caption="@LanguageHelper.GetTitle(langQueryList, 10900)" />
