--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/wwwroot/css/panache/pl-googlecharts.css
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/wwwroot/css/panache/pl-googlecharts.css
@@ -1,3 +1,12 @@
 ﻿table.google-visualization-orgchart-table {
     border-collapse: separate;
 }
+
+#chart_div {
+    overflow-x: scroll;
+}
+
+#chart_div svg text {
+    font-family: 'Arial' !important;
+    font-weight: normal !important;
+}
