--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Team/Team.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Team/Team.razor
@@ -3,7 +3,7 @@
 @inject UserAppCache UserAppCache
 @inject FoundationService MyFoundationService
 @inject TokenProvider TokenProvider
-@inject IMapper mapper
+@*@inject IMapper mapper*@
 @inject IJSRuntime JS;
 @using PanacheSoftware.Core.Domain.API.Team
 
