--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/_Host.cshtml
@@ -29,6 +29,7 @@
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
     <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
     <link href="_content/Blazorise.DataGrid/blazorise.datagrid.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
     <link href="css/panache/pl-googlecharts.css" rel="stylesheet" />
 </head>
 <body>
