--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -3,6 +3,7 @@
 @using Blazorise.Icons
 @using Blazorise.DataGrid
 @using Blazorise.Components
+@using Blazorise.Snackbar
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
