--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -20,6 +20,7 @@
 @using PanacheSoftware.UI.Client.Blazor.Shared.ProgressBar
 @using PanacheSoftware.UI.Client.Blazor.Shared.CustomFieldGroupLinks
 @using PanacheSoftware.UI.Client.Blazor.Shared.CustomFieldGroupEdit
+@using PanacheSoftware.UI.Client.Blazor.Shared.TaskList
 @using PanacheSoftware.UI.Client.Blazor.Pages.Dashboard
 @using PanacheSoftware.UI.Client.Blazor.Pages.Client
 @using PanacheSoftware.UI.Client.Blazor.Pages.Team
